# VietNerm

./: .gitignore  README.md  VIETNERM_TEST_LOG.md  mkdocs.yml  requirements.txt  setup.py  test.py  test_cccd_fix.py  try_pypi_sdk.py  vietnerm_train_pipeline.ipynb  vietnerm_train_pipeline_local.ipynb
agent-skill/: SKILL.md
docs/: architecture.md
huggingface/: __init__.py  clean_hf_repo.py  dataset_card.md  model_card.md  push_dataset.py  push_model.py
inference/: __init__.py  pipeline.py  postprocess.py  schema_mapper.py
kaggle/: README.md  kernel-metadata.json  vietnerm_train_kernel.py
raw_code/: giay_ra_vien_train.py  gplx_cccd_train.py
registry/: documents.yaml  schema.yaml  vehicle_registration.yaml
scripts/: generate_data.sh  generate_docs_blog_index.py  publish.sh  sync_sdk_templates.py  train.sh
sdk/: README.md  pyproject.toml  setup.py  test_all_features.py  test_detector.py  test_detector_confidence.py  test_download_config.py  test_extract_autodetect_fallback.py  test_output.txt  test_sdk.py  test_sliding_window.py  test_vietnerm.py  test_windowed_dataset.py  test_zero_code.py
sdk/vietnerm/: __init__.py  detector.py  download.py  ner.py  registry.py  utils.py
sdk/vietnerm/_inference/: pipeline.py  postprocess.py  schema_mapper.py
sdk/vietnerm/templates/cccd/: schema.yaml
sdk/vietnerm/templates/giay_khai_sinh/: schema.yaml  template_1.txt  template_3.txt
sdk/vietnerm/templates/giay_ra_vien/: template_2.txt  template_3.txt
sdk/vietnerm/templates/gplx/: template_1.txt  template_2.txt  template_3.txt  template_4.txt
sdk/vietnerm/templates/vehicle_registration/: template_1.txt  template_3.txt
synthetic/: generate_dataset.py  noise_engine.py  template_engine.py
training/: train.py  trainer.py
(+61 files in other folders)
